Add code insturmentation for Slicer4JSlicingStratefgy, Downgrade to JDK-11 :(