@@ -1,16 +1,21 @@
 package at.tugraz.ist.stracke.jsr.core.slicing.result;
 
-public record SliceEntry(
-  String className,
-  int startLine,
-  int endLine
-) {
+public class SliceEntry{
+  public final String className;
+  public final int startLine;
+  public final int endLine;
+
+  public SliceEntry(String className, int startLine, int endLine) {
+    this.className = className;
+    this.startLine = startLine;
+    this.endLine = endLine;
+  }
 
   @Override
   public String toString() {
-    return "%s:%s".formatted(
+    return String.format("%s:%s",
       this.className,
-      isMultiline() ? "%d-%d".formatted(startLine, endLine) : startLine
+      isMultiline() ? String.format("%d-%d", startLine, endLine) : startLine
     );
   }
 
